plugins {
    id 'ca.tjug.java-conventions'
    id 'ca.tjug.jlink-application'
    id 'application'
}

application {
    applicationDefaultJvmArgs = ["--enable-preview"]
}

tasks.named('distTar').configure { task -> task.enabled = false }

tasks.withType(JavaCompile).configureEach { task ->
    task.options.release = 23
    task.options.compilerArgs += '--enable-preview'
}